# stm32h743-keyboard-firmware

./: Cargo.toml  README.md  memory.x
src/: aliases.rs  config_structs.rs  layers.rs  layout.rs  main.rs  multiplexers.rs  userconfig.rs
